# 12-bachelors-project

./: .gitignore  ActorsAndChannels.opam  README.md  dune-project
.lsp/.cache/: db.transit.json
channels/: Makefile  dune-project
channels/lib/: channels.ml  combined.sk  dune  evaluator.ml  impl.ml  interpreter.ml  monads.ml  semantics.ml  semantics.sk  tests.ml
channels/lib/semantics/: __tmp.sk  channel.sk  dict.sk  either.sk  environment.sk  expressions.sk  function.sk  id.sk  integer.sk  list.sk  name.sk  pair.sk  queue.sk  value.sk
channels/test/: dune
lambda/: dune-project
lambda/lib/: dune  impls.ml  interpreters.ml  lambda.ml  lambda.sk  monads.ml  tests.ml
lib/: actorsAndChannels.ml  dune
lib/act2Ch/: dune
lib/actors/: dune  semantics.ml  utilities.ml
lib/actors/semantics/: actors.sk  environment.sk  function.sk
lib/ch2Act/: ch2Act.ml  dune
lib/channels/: dune  tests.ml  utilities.ml
lib/channels/semantics/: expressions.sk  value.sk
lib/common/: dune  monads.ml  types.ml
practice/concur/: dune-project
practice/concur/lib/: dune
practice/concur/test/: dune
practice/table_print/: dune-project
practice/table_print/lib/: dune
practice/table_print/test/: dune
presentation/: slides.ai
project/: Makefile  dune-project  test_prof
project/lib/: dune
project/lib/act2ch/: dune  interpreter.ml  semantics.ml  utilities.ml
project/lib/actors/: actors.ml  dune  interpreter.ml  semantics.ml  tests.ml  utilities.ml
project/lib/ch2act/: dune  interpreter.ml  semantics.ml  utilities.ml
project/lib/ch2act/semantics/: semantics.sk
project/lib/channels/: channels.ml  channels.mli  dune  interpreter.ml  semantics.ml  tests.ml  utilities.ml
project/lib/common/: common.ml  dune  utilities.ml
project/lib/project/: dune
prototypes/arith/: arith.sk  dune-project
prototypes/dice/: dune-project
prototypes/lame/: dune-project
report/: Report.md
samples/: README.md  arithmetic.ml  arithmetic.sk  boolean.sk  brainfuck.sk  buggy_branch.sk  concurrent.sk  concurrent_ss.sk  features.sk  implicits.sk  int64.sk  lambda.constr  lambda.sed  lambda.sk  lambda_ho.sk  lambda_reader.sk  lists.sk  miniml.constr  miniml.sk  nat.sk  options_monad.sk  osaat_cbv_recursion.sk  osaat_exception_state.sk  osaat_rewind.sk  pcf.constr  pcf.sk  stack.sk  stack_monad.sk  systemf.sk  typed_cbn_lambda.sk  while.constr  while.sk  while_amb.sk  while_better.sed  while_better.sk  while_monad.ml  while_monad.sk
semantics/actors/: value.sk
src/: 1.out
src/lib/act2Ch/: dune  utilities.ml
src/lib/act2Ch/semantics/: semantics.sk
test/: dune
(+35 files in other folders)
