(library
  (name act2Ch)
  (public_name ActorsAndChannels.act2Ch)
  (libraries
    core
    base
    stdio
    ActorsAndChannels.common
    ActorsAndChannels.actors
    ActorsAndChannels.channels)
  (inline_tests)
  (preprocess
    (pps
      ppx_jane
      ppx_inline_test)))
(env
  (dev
    (flags
      (:standard -w -30)))) ; Silence "duplicate-definitions"
