(library
  (name ch2Act)
  (public_name project.ch2Act)
  (libraries
    core
    base
    stdio
    project.common
    project.actors
    project.channels)
  (inline_tests)
  (preprocess
    (pps ppx_inline_test)))
(env
  (dev
    (flags
      (:standard -w -30)))) ; Silence "duplicate-definitions"
