(library
  (name act2Ch)
  (public_name project.act2Ch)
  (libraries
    core
    base
    stdio
    project.common
    project.actors
    project.channels)
  (inline_tests)
  (preprocess
    (pps
      ppx_jane
      ppx_inline_test)))
(env
  (dev
    (flags
      (:standard -w -30)))) ; Silence "duplicate-definitions"
